--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "devextreme": "19.1.5",
     "devextreme-react": "19.1.5",
+    "dotenv": "^8.1.0",
     "node-sass": "^4.12.0",
+    "node-wifi": "^2.0.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
