adding env and new orders

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devextreme": "19.1.5",
     "devextreme-react": "19.1.5",
     "dotenv": "^8.1.0",
+    "mysql": "^2.17.1",
     "node-sass": "^4.12.0",
     "node-wifi": "^2.0.7",
     "react": "^16.8.6",
