--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql": "^2.17.1",
     "node-sass": "^4.12.0",
     "node-wifi": "^2.0.7",
+    "pdfkit": "^0.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
